[package]
name = "rlox"
version = "0.1.0"
authors = ["robjsliwa <robjsliwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rloxlib"
path = "src/lib.rs"

[[bin]]
name = "rlox"
path = "src/bin/main.rs"

[dependencies]
clap = "3.0.0-beta.1"
failure = "0.1.8"
